Unnecessary boxing and unboxing were removed.